# pytest-image-diff

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyup.yml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: code.rst  conf.py  contributing.rst  index.rst
pytest_image_diff/: __init__.py  _types.py  helpers.py  image_diff.py  plugin.py  splinter.py
tests/: conftest.py  test_diff.py  test_no_throw.py  test_splinter.py
