[bumpversion]
current_version = 0.0.4
commit = True
commit_args = --no-verify
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:pytest_image_diff/__init__.py]

[bdist_wheel]
universal = 1

[flake8]
ignore = D203
exclude = 
	.git/,
	.tox/,
	docs/,
	build/,
	dist/
max-line-length = 99

[mypy]
python_version = 3.6
ignore_missing_imports = True
warn_return_any = True
warn_unused_configs = True

[mypy-pytest_image_diff.*]
disallow_untyped_defs = True
